# agentic-starter-kits

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SKILL_CHANGEFILE_langflow.md  lychee.toml  pyproject.toml  ruff.toml  run_llama_server.yaml  run_ogx_server.yaml  tracing.md  ty.toml
agents/a2a_langgraph_crewai/: Makefile  README.md  agent.yaml  pyproject.toml  template.env  values.yaml
agents/a2a_langgraph_crewai/src/a2a_langgraph_crewai/: a2a_reply.py  crew_a2a_server.py  langgraph_a2a_server.py
agents/autogen/mcp_agent/: .env.example  Dockerfile  Makefile  README.md  agent.yaml  deploy.sh  init.sh  main.py  pyproject.toml  template.env  values-mcp.yaml  values.yaml
agents/autogen/mcp_agent/evalhub/: tool_use.yaml
agents/autogen/mcp_agent/k8s/: deployment.yaml  route.yaml  service.yaml
agents/autogen/mcp_agent/mcp_automl_template/: AUTOML_DEPLOYMENT.md  Dockerfile  README.md  churn_schema.json  deploy_mcp.sh  interact_with_mcp.py  mcp_server.py  pyproject.toml  register_tools.py  tools_config.yaml  utils.py  values.yaml
agents/autogen/mcp_agent/scripts/: load_env_safe.sh
agents/autogen/templates/mcp_agent/: Makefile  README.md  agent.yaml  main.py  pyproject.toml
agents/base/llamaindex_websearch_agent/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  template.env
agents/base/openai_responses_agent/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  template.env
agents/community/langgraph_react_with_database_memory/: Dockerfile  README.md  init.sh  main.py  pyproject.toml  requirements.txt  template.env
agents/community/langgraph_react_with_database_memory/examples/: ai_service.py
agents/crewai/websearch_agent/: .env.example  Dockerfile  Makefile  README.md  agent.yaml  deploy.sh  init.sh  main.py  pyproject.toml  template.env  values.yaml
agents/crewai/websearch_agent/examples/: _interactive_chat.py  ai_service.py  execute_ai_service_locally.py
agents/crewai/websearch_agent/k8s/: deployment.yaml  route.yaml  service.yaml
agents/crewai/websearch_agent/playground/: app.py
agents/crewai/websearch_agent/tests/: test_tools.py
agents/google/adk/: .env.example  Dockerfile  Makefile  README.md  agent.yaml  main.py  pyproject.toml  values.yaml
agents/google/adk/examples/: ai_service.py
agents/google/adk/playground/: app.py
agents/google/adk/src/adk_agent/: agent.py
agents/langgraph/agentic_rag/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  agent.yaml  deploy.sh  init.sh  main.py  pyproject.toml  template.env  values.yaml
agents/langgraph/agentic_rag/data/: load_documents.py  sample_knowledge.txt
agents/langgraph/agentic_rag/evalhub/: tool_use.yaml
agents/langgraph/agentic_rag/examples/: _interactive_chat.py  ai_service.py  execute_ai_service_locally.py
agents/langgraph/agentic_rag/k8s/: deployment.yaml  route.yaml  service.yaml
agents/langgraph/agentic_rag/playground/: app.py
agents/langgraph/agentic_rag/tests/: test_tools.py
agents/langgraph/examples/guardrailed_agent/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  agent.yaml  main.py  pyproject.toml  values.yaml
agents/langgraph/human_in_the_loop/: .env.example  Dockerfile  Makefile  README.md  agent.yaml  deploy.sh  init.sh  main.py  pyproject.toml  template.env  values.yaml
agents/langgraph/human_in_the_loop/examples/: _interactive_chat.py  ai_service.py  execute_ai_service_locally.py
agents/langgraph/human_in_the_loop/k8s/: deployment.yaml  route.yaml  service.yaml
agents/langgraph/human_in_the_loop/playground/: app.py
agents/langgraph/react_agent/: .env.example  Dockerfile  Makefile  README.md  agent.yaml  deploy.sh  main.py  pyproject.toml  template.env  values.yaml
agents/langgraph/react_agent/evalhub/: tool_use.yaml
agents/langgraph/react_agent/examples/: ai_service.py  execute_ai_service_locally.py
agents/langgraph/react_agent/k8s/: deployment.yaml  route.yaml  service.yaml
agents/langgraph/react_agent/playground/: app.py
agents/langgraph/react_agent/tests/: test_auth_middleware.py  test_tools.py
agents/langgraph/react_with_database_memory/: .env.example  .gitignore  Dockerfile  Makefile  README.md  agent.yaml  deploy.sh  init.sh  main.py  pyproject.toml  template.env  values.yaml
agents/langgraph/react_with_database_memory/evalhub/: tool_use.yaml
agents/langgraph/react_with_database_memory/examples/: _interactive_chat.py  ai_service.py  clear_thread_history.py  execute_ai_service_locally.py  query_existing_deployment.py  test_memory_fifo.ipynb
agents/langgraph/react_with_database_memory/k8s/: deployment.yaml  route.yaml  service.yaml
agents/langgraph/react_with_database_memory/playground/: app.py
agents/langgraph/react_with_database_memory/tests/: test_tools.py
agents/llamaindex/websearch_agent/: .env.example  Dockerfile  Makefile  README.md  agent.yaml  deploy.sh  main.py  pyproject.toml  template.env  values.yaml
agents/llamaindex/websearch_agent/examples/: _interactive_chat.py  ai_service.py  execute_ai_service_locally.py
agents/llamaindex/websearch_agent/k8s/: deployment.yaml  route.yaml  service.yaml
agents/llamaindex/websearch_agent/playground/: app.py
agents/llamaindex/websearch_agent/tests/: test_tools.py
agents/openai/responses_agent/: README.md  agent.yaml  deploy.sh  main.py  pyproject.toml  values.yaml
agents/openai/responses_agent/examples/: _interactive_chat.py  ai_service.py
agents/vanilla_python/openai_responses_agent/: .env.example  Dockerfile  Makefile  README.md  agent.yaml  deploy.sh  main.py  pyproject.toml  template.env
agents/vanilla_python/openai_responses_agent/evalhub/: tool_use.yaml
agents/vanilla_python/openai_responses_agent/examples/: _interactive_chat.py  ai_service.py
components/auth/: README.md  pyproject.toml
examples/a2a_langgraph_crewai/: README.md  a2a_reply.py  crew_a2a_server.py  demo_client.py  langgraph_a2a_server.py  pyproject.toml  template.env
(+603 files in other folders)
