[project]
name = "autogen_agent_base"
version = "0.1.0"
description = "AutoGen agent API with MCP tools (FastAPI). Connects to MCP over SSE, exposes /chat."
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.12,<=3.14"
dependencies = [
    "autogen-agentchat",
    "autogen-ext[openai,mcp]",
    "openai",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.0",
    "mcp",
    "setuptools>=80.9.0,<82.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]
[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"
