[project]
name = "autogen_agent_base"
version = "0.1.0"
description = "AutoGen agent API with MCP tools (FastAPI). Connects to MCP over SSE, exposes /chat."
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.12,<=3.14"
dependencies = [
    "autogen-agentchat>=0.4.0,<1.0.0",
    "autogen-ext[openai,mcp]>=0.4.0,<1.0.0",
    "openai>=2.24.0,<3.0.0",
    "fastapi>=0.135.1,<1.0.0",
    "uvicorn[standard]>=0.41.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.2.0",
    "mcp>=1.0.0,<2.0.0",
    "setuptools>=80.9.0,<83.0.0",
    "starlette>=1.0.1",
]

[project.optional-dependencies]
tracing = [
    "mlflow>=3.10.0",
]
dev = [
    "pytest>=9.0.2",
]
llama = [
    "llama-stack>=0.7.1",
    "llama-stack-api>=0.7.1",
    "ollama>=0.4.0",
    "milvus-lite>=2.5.1",
    "pymilvus>=2.6.9",
    "chardet>=7.1.0",
    "pypdf>=6.9.0",
]
[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"
