[tool.poetry]
name = "llama_index_workflow_agent_base"
version = "0.1.0"
description = "A template for a LlamaIndex LLM app deployable on RHOAI Cloud as an ai_service. This particular example focues on an AutoX chatbot enhanced with external tools (function calling)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
    { include = "llama_index_workflow_agent_base", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.12, <3.14"
fastapi = ">=0.135.1"
uvicorn = { extras = ["standard"], version = ">=0.41.0" }
llama-index = ">=0.14.15"
llama-index-llms-openai-like = ">=0.5.3"
llama-index-utils-workflow = ">=0.5.2"
langchain = ">=1.2.10"
langchain-openai = ">=1.1.10"
langgraph-prebuilt = ">=1.0.7"
llama-stack = ">=0.5.1"
milvus-lite = ">=2.5.1"
setuptools = ">=80.9.0,<82.0.0"
python-dotenv = ">=1.2.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
