[tool.poetry]
name = "openai_responses_agent_base"
version = "0.1.0"
description = "Agent without any agentic framework: OpenAI client and pure Python (Responses API)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
    { include = "openai_responses_agent_base", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
python-dotenv = ">=1.2.2"
openai = ">=2.24.0"
llama-stack = ">=0.5.1"
milvus-lite = "2.5.1"
setuptools = ">=80.9.0,<82.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
