[tool.poetry]
name = "langgraph_react_with_database_memory_base"
version = "0.1.0"
description = "A LangGraph ReAct agent with PostgreSQL-based conversation memory. Uses OpenAI-compatible APIs for LLM access and persistent thread-based chat history."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "langgraph_react_with_database_memory_base", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = ">=0.132.0"
uvicorn = { extras = ["standard"], version = ">=0.41.0" }
pydantic = ">=2.12.5"
langchain = ">=1.2.10"
langchain-core = ">=1.2.15"
langchain-openai = ">=1.1.10"
langgraph = ">=1.0.9"
langgraph-prebuilt = ">=1.0.0"
langgraph-checkpoint-postgres = ">=3.0.0"
llama-stack = ">=0.5.0"
llama-stack-client = ">=0.5.0"
psycopg = { extras = ["binary", "pool"], version = ">=3.2.9" }
openai = ">=2.21.0"
python-dotenv = ">=1.2.1"
pymilvus = ">=2.6.8"
milvus-lite = ">=2.5.1"
setuptools = ">=80.9.0,<82.0.0"
typing-extensions = ">=4.15.0"
requests = ">=2.31.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
