[project]
name = "crewai_web_search"
version = "0.1.0"
description = "A CrewAI-based web search agent with FastAPI, deployable on OpenShift."
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.12,<=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "crewai[litellm]>=1.11.0",
    "python-dotenv>=1.1.1,<1.2.0",
    "setuptools>=80.9.0,<82.0.0",
    "llama-stack==0.5.0",
    "llama-stack-api==0.5.0",
    "pymilvus==2.5.3",
    "milvus-lite>=2.4.0", # FORCED: The local database engine
    "flask==3.1.3"
]
[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crewai_web_search = ["config/*.yaml"]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"
