[project]
name = "adk_agent"
version = "0.1.0"
description = "A template for a Google ADK 2.0 LLM app deployable on RHOAI Cloud as an ai_service. This example uses ADK with LiteLLM to connect to a LlamaStack-compatible endpoint."
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.12,<=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "google-adk>=2.0.0a1",
    "litellm>=1.50.0,!=1.82.7,!=1.82.8", # Those versions were compromised so we skip them
    "openai>=2.24.0",
    "python-dotenv>=1.2.2",
    "setuptools>=80.9.0,<82.0.0",
    "flask>=3.1.0",
    "pymilvus>=2.4.10",
    "milvus-lite>=2.5.1",
    "chardet",
    "pypdf",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"
