[project]
name = "adk_agent"
version = "0.1.0"
description = "A template for a Google ADK 2.0 LLM app deployable on RHOAI Cloud as an ai_service. This example uses ADK with LiteLLM to connect to a LlamaStack-compatible endpoint."
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.12,<=3.14"
dependencies = [
    "fastapi>=0.135.1,<1.0.0",
    "starlette>=1.0.1", # CVE-2026-48710: Host-Header auth bypass in starlette<1.0.1
    "uvicorn[standard]>=0.41.0,<1.0.0",
    "google-adk>=2.0.0a1,<3.0.0",
    "litellm>=1.50.0,!=1.82.7,!=1.82.8,<2.0.0", # Those versions were compromised so we skip them
    "openai>=2.24.0,<3.0.0",
    "python-dotenv>=1.2.2",
    "setuptools>=80.9.0,<83.0.0",
    "flask>=3.1.0,<4.0.0",
    "pymilvus>=2.4.10,<3.0.0",
    "milvus-lite>=2.5.1",
    "chardet>=7.1.0",
    "pypdf>=6.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
# google-adk 2.1.0 pins starlette<1; override to pull the CVE-2026-48710 fix
override-dependencies = [
    "starlette>=1.0.1",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"
