[project]
name = "langgraph_agentic_rag"
version = "0.2.0"
description = "A LangGraph Agentic RAG app using OpenAI-compatible APIs. Supports retrieval-augmented generation with customizable vector stores."
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "fastapi>=0.132.0",
    "uvicorn[standard]>=0.41.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langchain-community>=0.4.1",
    "langchain-milvus>=0.3.3",
    "langgraph-prebuilt>=1.0.0",
    "llama-stack>=0.5.0",
    "llama-stack-client>=0.5.0",
    "openai>=2.21.0",
    "milvus-lite>=2.5.1",
    "python-dotenv>=1.2.1",
    "setuptools>=80.9.0,<82.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"
