[project]
name = "react_agent"
version = "0.1.0"
description = "A template for a LangGraph LLM app deployable on RHOAI Cloud as an ai_service. This particular example focues on an AutoX chatbot enhanced with external tools (function calling)."
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.12,<=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph-prebuilt>=1.0.8",
    "llama-stack>=0.5.0",
    "openai>=2.24.0",
    "milvus-lite>=2.5.1",
    "python-dotenv>=1.2.2",
    "setuptools>=80.9.0,<82.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]
eval = [
    "unitxt>=1.24.0",
    "datasets==3.6.0",
    "nltk>=3.9.1",
    "rouge-score>=0.1.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"