[project]
name = "websearch_agent"
version = "0.1.0"
description = "A template for a LlamaIndex LLM app deployable on RHOAI Cloud as an ai_service. This particular example focues on an AutoX chatbot enhanced with external tools (function calling)."
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.12, <3.14"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "llama-index>=0.14.15",
    "llama-index-llms-openai-like>=0.5.3",
    "llama-index-utils-workflow>=0.5.2",
    "setuptools>=80.9.0,<82.0.0",
    "python-dotenv>=1.2.2",
    "nest_asyncio>=1.6.0",
    "flask>=3.1.0",
]

[project.optional-dependencies]
local = [
    "llama-stack>=0.5.1",
    "milvus-lite>=2.5.1",
]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"