[project]
name = "responses_agent"
version = "0.1.0"
description = "Agent without any agentic framework: OpenAI client and pure Python (Responses API)."
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.12, <3.14"
dependencies = [
    "python-dotenv>=1.2.2",
    "openai>=2.24.0",
    "llama-stack>=0.5.1",
    "milvus-lite==2.5.1",
    "setuptools>=80.9.0,<82.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"