[project]
name = "openai_responses_agent"
version = "0.1.0"
description = "Agent without any agentic framework: OpenAI client and pure Python (Responses API)."
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.12, <3.14"
dependencies = [
    "python-dotenv>=1.2.2",
    "openai>=2.24.0",
    "setuptools>=80.9.0,<82.0.0",
    "flask>=3.1.0",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]
tracing = [
    "mlflow>=3.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"