[project]
name = "autogen_agent_base"
version = "0.1.0"
description = "AutoGen agent API with MCP tools (FastAPI). Connects to MCP over SSE, exposes /chat."
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.12,<=3.14"
dependencies = [
    "autogen-agentchat>=0.4.6",
    "autogen-ext[openai,mcp]>=0.4.6",
    "openai>=1.52.2",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.0",
    "mcp>=1.1.3",
    "setuptools>=80.9.0,<83.0.0",
    "starlette>=1.0.1",
]

[project.optional-dependencies]
tracing = [
    "mlflow>=3.10.0",
]
dev = [
    "pytest>=9.0.2",
]
[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"
